Added component segmentation and exporting to JSONs for Schematise including treatment of reversed blocks and links on all sides.

--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -179,6 +179,7 @@
     "        # self.inPath = []\n",
     "        # self.outPath = []\n",
     "        self.nodePass = [0]*len(self.nodes)\n",
+    "        self.nodeStrandPaths = [[0,0] for _ in range(len(self.nodes))]\n",
     "        self.pathStarts = [0]*len(self.nodes)\n",
     "        self.inPath = [0]*len(self.nodes)\n",
     "        self.outPath = [0]*len(self.nodes)\n",
@@ -188,8 +189,10 @@
     "            \n",
     "            previousNode = None\n",
     "            for nodeStrand in path:\n",
-    "                pathNode = int(nodeStrand[:-1])-1\n",
+    "                pathNode = self.nodeNameToID[nodeStrand[:-1]]-1\n",
+    "                pathStrand = int(nodeStrand[-1]=='-') # 0 if \"+\", 1 if \"-\"\n",
     "                self.nodePass[pathNode] += 1\n",
+    "                self.nodeStrandPaths[pathNode][pathStrand] += 1\n",
     "                self.outPath[pathNode] += 1\n",
     "                self.inPath[pathNode] += 1\n",
     "                if previousNode is not None:\n",
@@ -200,6 +203,7 @@
     "                    self.inPath[pathNode] -= 1\n",
     "                previousNode = pathNode\n",
     "            self.outPath[previousNode] -= 1\n",
+    "    \n",
     "    def _revertLinks(self,forwardLinks):\n",
     "        backLinks = {}\n",
     "        for fromNome,links in forwardLinks.items():\n",
@@ -221,7 +225,7 @@
     "        jsonFile = f'{dirPath}{os.path.sep}{baseName}.json'\n",
     "        \n",
     "        if os.path.exists(jsonFile):\n",
-    "            nodeNames = json.load(jsonFile)\n",
+    "            nodeNames = json.load(open(jsonFile,mode='r'))\n",
     "        else:\n",
     "            nodeNames = None\n",
     "        \n",
@@ -238,9 +242,9 @@
     "        linkList = [el for el in gfaList if el.lower().startswith('l')]\n",
     "        pathStringsList = [el for el in gfaList if el.lower().startswith('p')]\n",
     "\n",
-    "        nodeNameToID = {}\n",
+    "        self.nodeNameToID = {}\n",
     "        \n",
-    "        for node in segmentList:\n",
+    "        for nodeID,node in enumerate(segmentList):\n",
     "            _,segID,segGFAData = node.rstrip().split(sep='\\t')\n",
     "            if isGFASeq:\n",
     "                segSeq = segGFAData\n",
@@ -248,21 +252,21 @@
     "                segSeq = ''\n",
     "            \n",
     "            if nodeNames is not None:\n",
-    "                segName = nodeNames[segID]\n",
+    "                segName = nodeNames[int(segID)-1]\n",
     "            elif isGFASeq:\n",
     "                segName = str(segID)\n",
     "            else:\n",
     "                segName = segGFAData\n",
     "            \n",
-    "            nodeNameToID[segID] = len(self.nodes)+1\n",
+    "            self.nodeNameToID[segID] = len(self.nodes)+1\n",
     "            \n",
     "            self.nodes.append(segName)\n",
     "            self.nodesData.append(segSeq)\n",
     "            \n",
     "        for link in linkList:\n",
     "            _,fromNodeID,fromStrand,toNodeID,toStrand,_ = link.rstrip().split(sep='\\t')\n",
-    "            fromNode = nodeNameToID[fromNodeID]\n",
-    "            toNode = nodeNameToID[toNodeID]\n",
+    "            fromNode = self.nodeNameToID[fromNodeID]\n",
+    "            toNode = self.nodeNameToID[toNodeID]\n",
     "            \n",
     "            curLink = self.forwardLinks.setdefault(fromNode,{})\n",
     "            curStrand = curLink.setdefault(fromStrand,[])\n",
@@ -272,8 +276,7 @@
     "            _,seqID,path,_ = pathString.rstrip().split(sep='\\t')\n",
     "            self.paths.append(path.split(','))\n",
     "            self.accessions.append(seqID)\n",
-    "            \n",
-    "        \n",
+    "                 \n",
     "    def _graphFromNodesLinks(self,nodes,links):\n",
     "        raise NotImplementedError('Generating graph from nodes and links is not yet implemented.')\n",
     "    \n",
@@ -417,12 +420,14 @@
     "    \n",
     "    def treeSort(self,byPath=True,bubblePriorityThreshold=0.5):\n",
     "        \n",
+    "        print('Constructing Tremaux tree')\n",
     "        self.generateTremauxTree(byPath)\n",
-    "        \n",
+    "        print('Done!')\n",
     "        queue = []\n",
     "        processed = []\n",
     "        self.order = []\n",
-    "\n",
+    "        \n",
+    "        print('Getting root nodes')\n",
     "        rootNodes = self.tremauxTree.getRootNodes()[::-1]\n",
     "#         self.order.append(rootNode)\n",
     "        startNode = rootNodes.pop()\n",
@@ -431,6 +436,7 @@
     "        descendantsToAdd.sort(key=lambda edge: self.edgePaths.get(edge,0))\n",
     "        queue.extend(descendantsToAdd)\n",
     "        \n",
+    "        print('Start Loop...')\n",
     "        while len(queue)>0 or len(rootNodes)>0:\n",
     "#             pdb.set_trace()\n",
     "            if len(queue)==0:\n",
@@ -447,6 +453,8 @@
     "                    break\n",
     "            \n",
     "            startNode,endNode = queue.pop()\n",
+    "            \n",
+    "            print(f'{len(queue)} - {len(processed)} - {len(self.order)} - {startNode} - {endNode}')\n",
     "            \n",
     "            if (startNode,endNode) in processed:\n",
     "                continue\n",
@@ -533,7 +541,8 @@
     "            \n",
     "            \n",
     "            if len(bubblePriorityQueue)>0:\n",
-    "                queue.append((startNode,endNode))\n",
+    "                queue.append((startNode,endNode))#Why would I add the processed block again? Should I add descendant edges of the end node here? \n",
+    "                # It should save a lot of wasted time and speed up the process.\n",
     "                bubblePriorityQueue.sort(key=lambda b: self.edgePaths[b[0],endNode])\n",
     "                while len(bubblePriorityQueue)>0:\n",
     "                    bNode,bToAdd = bubblePriorityQueue.pop()\n",
@@ -547,25 +556,26 @@
     "                edgesToAdd = [edge for edge in list(self.tremauxTree.edges(endNode)) if edge not in processed and edge not in queue]\n",
     "                edgesToAdd.sort(key=lambda edge: self.edgePaths.get(edge,0))\n",
     "                queue.extend(edgesToAdd)\n",
-    "            \n",
-    "    \n",
+    "             \n",
     "    def _generateIsInversionDict(self):\n",
-    "        setLinks = self._linksDictToSet(self.forwardLinks)\n",
-    "        uniqueNodeStrands = list(set(list(setLinks.keys())).union(*list(setLinks.values())))\n",
+    "#         setLinks = self._linksDictToSet(self.forwardLinks)\n",
+    "#         uniqueNodeStrands = list(set(list(setLinks.keys())).union(*list(setLinks.values())))\n",
     "        \n",
-    "        uniqueNodeStrands.sort(key=lambda val: int(val[:-1])) # Is it really necessary if we build a dict\n",
+    "#         uniqueNodeStrands.sort(key=lambda val: int(val[:-1])) # Is it really necessary if we build a dict\n",
     "        \n",
-    "        nodeStrandArray = np.array([(v[:-1],v[-1]) for v in uniqueNodeStrands])\n",
-    "        numStrandsPerNode = np.unique(nodeStrandArray[:,0],return_counts=True)\n",
+    "#         nodeStrandArray = np.array([(v[:-1],v[-1]) for v in uniqueNodeStrands])\n",
+    "#         numStrandsPerNode = np.unique(nodeStrandArray[:,0],return_counts=True)\n",
     "        \n",
-    "        isInversionDict = dict([(int(node),numStrands<=1) for node,numStrands in zip(*numStrandsPerNode)])\n",
+    "#         isInversionDict = dict([(int(node),numStrands<=1) for node,numStrands in zip(*numStrandsPerNode)])\n",
     "        \n",
+    "        isInversionDict = dict([(int(node+1),(self.nodeStrandPaths[node][1]>self.nodeStrandPaths[node][0])) for node in range(len(self.nodes))])\n",
+    "    \n",
     "        return isInversionDict\n",
     "    \n",
     "    def toGFA(self,gfaFile,doSeq=True):\n",
     "        baseName = os.path.splitext(os.path.basename(gfaFile))[0]\n",
     "        dirPath = os.path.dirname(gfaFile)\n",
-    "        jsonFile = f'{dirPath}{os.path.sep}{baseName}.json'\n",
+    "        jsonFile = f'{dirPath}{os.path.sep}nodeNames_{baseName}.json'\n",
     "        \n",
     "        gfaWriter = open(gfaFile,mode='w')\n",
     "        \n",
@@ -586,18 +596,19 @@
     "            translator[nodeID] = i+1\n",
     "        \n",
     "        isInversionDict = self._generateIsInversionDict()\n",
+    "        strandInversionDict = {'+':'-','-':'+'}\n",
     "        \n",
     "        for fromNode,strandLinks in self.forwardLinks.items():\n",
     "            for fromStrand,toLinkStrands in strandLinks.items():\n",
     "                for toNode,toStrand in toLinkStrands:\n",
     "                    \n",
     "                    if isInversionDict.get(fromNode,False):\n",
-    "                        _fromStrand = '+'\n",
+    "                        _fromStrand = strandInversionDict[fromStrand]\n",
     "                    else:\n",
     "                        _fromStrand = fromStrand\n",
     "\n",
     "                    if isInversionDict.get(toNode,False):\n",
-    "                        _toStrand = '+'\n",
+    "                        _toStrand = strandInversionDict[toStrand]\n",
     "                    else:\n",
     "                        _toStrand = toStrand\n",
     "                    gfaWriter.write(f'L\\t{translator[fromNode]}\\t{_fromStrand}\\t{translator[toNode]}\\t{_toStrand}\\t*\\n')\n",
@@ -605,9 +616,9 @@
     "        for path,accessionID in zip(self.paths,self.accessions):\n",
     "            newPath = []\n",
     "            for nodeStrand in path:\n",
-    "                node = int(nodeStrand[:-1])\n",
-    "                if isInversionDict.get(int(nodeStrand[:-1]),False):\n",
-    "                    strand = '+'\n",
+    "                node = self.nodeNameToID[nodeStrand[:-1]]\n",
+    "                if isInversionDict.get(node,False):\n",
+    "                    strand = strandInversionDict[nodeStrand[-1]]\n",
     "                else:\n",
     "                    strand = nodeStrand[-1]\n",
     "                newPath.append(f'{translator[node]}{strand}')\n",
@@ -647,6 +658,35 @@
     "            except KeyError:\n",
     "                return None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_init.ipynb.\n",
+      "Converted 01_graph.ipynb.\n",
+      "Converted 02_tree.ipynb.\n",
+      "Converted 03_synteny.ipynb.\n",
+      "Converted 04_utils.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "notebook2script()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
