Refactored component segmentation functionality and moved it to separate module; corrected bugs with component segmentation and sorting.

--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -43,6 +43,7 @@
       "Converted 02_tree.ipynb.\n",
       "Converted 03_synteny.ipynb.\n",
       "Converted 04_utils.ipynb.\n",
+      "Converted 05_export.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -81,7 +82,7 @@
     "from dnasim.simulation import inverseSequence\n",
     "\n",
     "from pangraph_constructor.synteny import processAccession,generatePathsLinks\n",
-    "from pangraph_constructor.utils import bidict\n",
+    "from pangraph_constructor.utils import bidict,NpEncoder,pathFileToPathDict\n",
     "from pangraph_constructor.tree import TremauxTree"
    ]
   },
@@ -135,8 +136,13 @@
     "    def __init__(self,gfaPath=None,\n",
     "                 paths=None,\n",
     "                 nodes=None,nodesData=None,links=None,\n",
+    "                 pathsDict=None,\n",
     "                 sequenceFiles=None,annotationFiles=None,\n",
     "                 doBack=False,**kwargs):\n",
+    "        \n",
+    "        '''\n",
+    "        accessionsToRemove: list or None. If not None, a list of strings, if any of the string contains in pathname, the path will be ignored.\n",
+    "        '''\n",
     "        self.nodes = []\n",
     "        self.nodesData = []\n",
     "        self.forwardLinks = {}\n",
@@ -148,7 +154,7 @@
     "        self.isBack = doBack\n",
     "        \n",
     "        if gfaPath is not None:\n",
-    "            self._loadGFA(gfaPath,isGFASeq=kwargs.get('isGFASeq',True))\n",
+    "            self._loadGFA(gfaPath,isGFASeq=kwargs.get('isGFASeq',True),accessionsToRemove=kwargs.get('accessionsToRemove',None))\n",
     "        elif nodes is not None and links is not None and paths is not None:\n",
     "            self.nodes = nodes\n",
     "            if nodesData is not None:\n",
@@ -157,9 +163,8 @@
     "                self.nodesData = ['']*len(self.nodes)\n",
     "            self.forwardLinks = links\n",
     "            self.paths = paths\n",
-    "        elif paths is not None and sequenceFiles is not None:\n",
-    "            self.nodes,self.nodesData,self.forwardLinks = self.graphFromPaths(paths,sequenceFiles) # sequenceFiles can be None\n",
-    "            self.paths = paths\n",
+    "        elif pathsDict is not None:\n",
+    "            self._graphFromPaths(pathsDict) # sequenceFiles can be None\n",
     "        elif annotationFiles is not None:\n",
     "            self._graphFromAnnotation(annotationFiles,sequenceFiles,**kwargs)\n",
     "        \n",
@@ -179,6 +184,7 @@
     "        # self.inPath = []\n",
     "        # self.outPath = []\n",
     "        self.nodePass = [0]*len(self.nodes)\n",
+    "        \n",
     "        self.nodeStrandPaths = [[0,0] for _ in range(len(self.nodes))]\n",
     "        self.pathStarts = [0]*len(self.nodes)\n",
     "        self.inPath = [0]*len(self.nodes)\n",
@@ -219,12 +225,15 @@
     "                    backLinks[item[0]][item[1]].append([fromNode,fromStrand])\n",
     "        return backLinks\n",
     "    \n",
-    "    def _loadGFA(self,gfaFile,isGFASeq=True):\n",
+    "    def _loadGFA(self,gfaFile,isGFASeq=True,accessionsToRemove=None):\n",
     "        baseName = os.path.splitext(os.path.basename(gfaFile))[0]\n",
     "        dirPath = os.path.dirname(gfaFile)\n",
-    "        jsonFile = f'{dirPath}{os.path.sep}{baseName}.json'\n",
+    "        jsonFile = f'{dirPath}{os.path.sep}nodeNames_{baseName}.json'\n",
+    "        \n",
+    "        print(f'Loading graph from {gfaFile}')\n",
     "        \n",
     "        if os.path.exists(jsonFile):\n",
+    "            print(f'Found nodeNames file {jsonFile}, loading names.')\n",
     "            nodeNames = json.load(open(jsonFile,mode='r'))\n",
     "        else:\n",
     "            nodeNames = None\n",
@@ -244,8 +253,13 @@
     "\n",
     "        self.nodeNameToID = {}\n",
     "        \n",
+    "        numSegments = len(segmentList)\n",
+    "        numSegmentDigits = np.int(np.ceil(np.log10(numSegments)))\n",
+    "        \n",
     "        for nodeID,node in enumerate(segmentList):\n",
-    "            _,segID,segGFAData = node.rstrip().split(sep='\\t')\n",
+    "            print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
+    "            segmentArray = node.rstrip().split(sep='\\t')\n",
+    "            segID,segGFAData = segmentArray[1:3]\n",
     "            if isGFASeq:\n",
     "                segSeq = segGFAData\n",
     "            else:\n",
@@ -262,27 +276,100 @@
     "            \n",
     "            self.nodes.append(segName)\n",
     "            self.nodesData.append(segSeq)\n",
+    "        \n",
+    "        print('\\nLoading segments finished.')\n",
     "            \n",
-    "        for link in linkList:\n",
-    "            _,fromNodeID,fromStrand,toNodeID,toStrand,_ = link.rstrip().split(sep='\\t')\n",
+    "        numLinks = len(linkList)\n",
+    "        numLinkDigits = np.int(np.ceil(np.log10(numLinks)))\n",
+    "        \n",
+    "        for linkID,link in enumerate(linkList):\n",
+    "            print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
+    "            linkArray = link.rstrip().split(sep='\\t')\n",
+    "            fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
     "            fromNode = self.nodeNameToID[fromNodeID]\n",
     "            toNode = self.nodeNameToID[toNodeID]\n",
     "            \n",
     "            curLink = self.forwardLinks.setdefault(fromNode,{})\n",
     "            curStrand = curLink.setdefault(fromStrand,[])\n",
     "            curStrand.append((toNode,toStrand))\n",
+    "        print('\\nLoading links finished')\n",
     "        \n",
-    "        for pathString in pathStringsList:\n",
-    "            _,seqID,path,_ = pathString.rstrip().split(sep='\\t')\n",
-    "            self.paths.append(path.split(','))\n",
-    "            self.accessions.append(seqID)\n",
-    "                 \n",
+    "        numPaths = len(pathStringsList)\n",
+    "        numPathDigits = np.int(np.ceil(np.log10(numPaths)))\n",
+    "        addedPaths = 0\n",
+    "        ignoredPaths = 0\n",
+    "        for pathID,pathString in enumerate(pathStringsList):\n",
+    "            print(f'\\rLoading link {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "            pathArray = pathString.rstrip().split(sep='\\t')\n",
+    "            seqID,path = pathArray[1:3]\n",
+    "            useAccession = True\n",
+    "            if isinstance(accessionsToRemove,list):\n",
+    "                for accessionTemplate in accessionsToRemove:\n",
+    "                    if seqID.find(accessionTemplate)!=-1:\n",
+    "                        ignoredPaths += 1\n",
+    "                        useAccession = False\n",
+    "                        break\n",
+    "            if useAccession:\n",
+    "                self.paths.append(path.split(','))\n",
+    "                self.accessions.append(seqID)\n",
+    "                addedPaths += 1\n",
+    "        print(f'\\nLoading paths finished. {addedPaths} paths added, {ignoredPaths} paths ignored.')\n",
+    "        \n",
     "    def _graphFromNodesLinks(self,nodes,links):\n",
     "        raise NotImplementedError('Generating graph from nodes and links is not yet implemented.')\n",
     "    \n",
-    "    def _graphFromPaths(self,paths,sequenceFiles=None):\n",
-    "        raise NotImplementedError('Generating graphs from paths is not implemented yet.')\n",
+    "    def _getNodeID(self,node,maxNodeNameLength):\n",
+    "        _node = node.zfill(maxNodeNameLength)\n",
+    "        try:\n",
+    "            nodeID = self.nodes.index(_node)+1\n",
+    "        except ValueError:\n",
+    "            self.nodes.append(_node)\n",
+    "            nodeID = len(self.nodes)\n",
+    "            self.nodeNameToID[str(nodeID)] = nodeID\n",
+    "        return nodeID\n",
     "    \n",
+    "    def _graphFromPaths(self,paths,sequenceFiles=None):\n",
+    "        if sequenceFiles is not None:\n",
+    "            warnings.warn(\"sequenceFiles reading with path is not yet implemented.\")\n",
+    "        \n",
+    "        if not isinstance(paths,dict):\n",
+    "            raise ValueError(f\"paths should be dict but {type(paths)} was given.\")\n",
+    "        \n",
+    "#         if sequenceFiles is None:\n",
+    "        maxNodeNameLength = len(max([max(path,key=lambda a: len(a)) for path in paths.values()],key=lambda a: len(a))) - 1\n",
+    "        \n",
+    "        self.nodeNameToID = {}\n",
+    "        self.nodes = []\n",
+    "        self.paths = []\n",
+    "        self.accessions = []\n",
+    "        links = {}\n",
+    "        \n",
+    "        self.nodeNameToID = {}\n",
+    "        \n",
+    "        for pathID,path in paths.items():\n",
+    "            self.accessions.append(pathID)\n",
+    "            prevNode = path[0][:-1]\n",
+    "            prevDirection = path[0][-1]\n",
+    "            prevNodeID = self._getNodeID(prevNode,maxNodeNameLength)\n",
+    "            newPath = [f'{prevNodeID}{prevDirection}']\n",
+    "            for nodeDir in path[1:]:\n",
+    "                \n",
+    "                node = nodeDir[:-1]\n",
+    "                direction = nodeDir[-1]\n",
+    "                \n",
+    "                nodeID = self._getNodeID(node,maxNodeNameLength)\n",
+    "                newPath.append(f'{nodeID}{direction}')\n",
+    "                links.setdefault(prevNodeID,{}).setdefault(prevDirection,set()).add((nodeID,direction))\n",
+    "                \n",
+    "                prevNode = node\n",
+    "                prevDirection = direction\n",
+    "                prevNodeID = nodeID\n",
+    "            self.paths.append(newPath)\n",
+    "        \n",
+    "        \n",
+    "        self.forwardLinks = dict([(fromNode,dict([(fromStrand,list(toSet)) for fromStrand,toSet in strandDict.items()])) for fromNode,strandDict in links.items()])\n",
+    "        self.nodesData = ['']*len(self.nodes)\n",
+    "        \n",
     "    def _graphFromAnnotation(self,annotationFiles,sequenceFiles=None,**kwargs):\n",
     "        \n",
     "        try:\n",
@@ -673,6 +760,7 @@
       "Converted 02_tree.ipynb.\n",
       "Converted 03_synteny.ipynb.\n",
       "Converted 04_utils.ipynb.\n",
+      "Converted 05_export.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
