--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -43,6 +43,7 @@
       "Converted 02_tree.ipynb.\n",
       "Converted 03_synteny.ipynb.\n",
       "Converted 04_utils.ipynb.\n",
+      "Converted 05_export.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -63,8 +64,11 @@
     "#exporti\n",
     "import numpy as np\n",
     "\n",
+    "import pdb\n",
+    "\n",
     "import networkx as nx\n",
     "from networkx.algorithms.operators.binary import compose\n",
+    "from networkx import NetworkXNoPath\n",
     "\n",
     "from pangraph_constructor.utils import bidict"
    ]
@@ -147,6 +151,7 @@
     "            for startNode in self.startingNodes:\n",
     "                if startNode not in treeCombined:\n",
     "                    treeCombined = compose(treeCombined,nx.dfs_tree(self.originalGraph,source=startNode))\n",
+    "            \n",
     "            if byPath:\n",
     "                self._preprocessPathTree(treeCombined)\n",
     "            else:\n",
@@ -160,16 +165,43 @@
     "        return treeCombined\n",
     "    \n",
     "    def _preprocessPathTree(self,treeCombined):\n",
+    "#         pdb.set_trace()\n",
     "        for node in self.originalGraph.nodes:\n",
+    "            \n",
+    "            # get all edges coming to given node in the full graph\n",
     "            graphInEdgeList = list(self.originalGraph.in_edges(node))\n",
+    "            # get all edges coming to a given node in the tremaux tree\n",
     "            treeInEdgeList = list(treeCombined.in_edges(node))\n",
-    "            if len(graphInEdgeList)>0 and len(treeInEdgeList)>0:\n",
-    "                graphInEdgeList = [edge for edge in graphInEdgeList if not nx.has_path(treeCombined,edge[1],edge[0]) and edge[0]!=edge[1]]\n",
+    "#             print(f'Node: {node}')\n",
+    "#             print(f'Graph edges: {graphInEdgeList}')\n",
+    "#             print(f'Tree edges: {treeInEdgeList}')\n",
+    "            if len(graphInEdgeList)>0:# and len(treeInEdgeList)>0:\n",
+    "                # Remove self-cycle paths larger cycles will be removed later.\n",
+    "                graphInEdgeList = [edge for edge in graphInEdgeList if edge[0]!=edge[1]] # removed 'not nx.has_path(treeCombined,edge[1],edge[0]) and '\n",
+    "#                 print(graphInEdgeList)\n",
+    "                # Get number of paths passing each edge\n",
     "                edgePaths = [self.parentGraph.edgePaths.get(edge,0) for edge in graphInEdgeList]\n",
-    "                edgeToKeep = np.argmax(edgePaths)\n",
-    "                treeCombined.remove_edges_from(treeInEdgeList)\n",
-    "                treeCombined.add_edge(*graphInEdgeList[edgeToKeep])\n",
-    "    \n",
+    "                # Find the edge with maximum number of paths passing\n",
+    "                edgeToKeep = graphInEdgeList[np.argmax(edgePaths)]\n",
+    "#                 print(f'Edge to keep: {edgeToKeep}')\n",
+    "                # If the best edge not in the tree already\n",
+    "                if edgeToKeep not in treeInEdgeList:\n",
+    "#                     print('Edge substituted!')\n",
+    "                    # Remove current incoming edge in the tree\n",
+    "                    treeCombined.remove_edges_from(treeInEdgeList)\n",
+    "                    # and replace it with newly identified best edge\n",
+    "                    treeCombined.add_edge(*edgeToKeep)\n",
+    "                    try:\n",
+    "                        # See if there was any cycle paths created\n",
+    "                        for path in nx.all_shortest_paths(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
+    "#                             print(f'Path {path} severed!')\n",
+    "                            # For each cycle, severe the link outgoing from current node.\n",
+    "                            treeCombined.remove_edge(path[0],path[1])\n",
+    "                    except NetworkXNoPath:\n",
+    "                        # If no cycle path found, just carry on.\n",
+    "                        pass\n",
+    "#             print('#######')\n",
+    "                    \n",
     "    def _getMissingEdges(self):\n",
     "        graphEdges = set(list(self.originalGraph.edges))\n",
     "        treeEdges = set(list(self.edges))\n",
@@ -177,11 +209,27 @@
     "\n",
     "    def processSpecialEdges(self,missingLinks):\n",
     "        combinedGraph = nx.DiGraph(self)\n",
+    "        processedEdges = []\n",
     "        for fromNode,toNode in missingLinks:\n",
     "            edgeStatus = self.isBubbleLoop(fromNode,toNode,combinedGraph)\n",
     "            if edgeStatus == -1:\n",
+    "#                 try:\n",
+    "#                     if self.parentGraph.edgePaths[(toNode,fromNode)]>self.parentGraph.edgePaths[(fromNode,toNode)]:\n",
+    "#                         self.loopEdges.add(fromNode,toNode)\n",
+    "#                     else:\n",
+    "#                         self.loopEdges.add(toNode,fromNode)\n",
+    "#                         if self.has_edge(toNode,fromNode):\n",
+    "#                             self.remove_edge(toNode,fromNode)\n",
+    "#                             self.add_edge(fromNode,toNode)\n",
+    "#                         else:\n",
+    "#                             self.bubbleEdges.add(fromNode,toNode)\n",
+    "#                             combinedGraph.add_edge(fromNode,toNode)\n",
+    "#                             processedEdges.append((toNode,fromNode))\n",
+    "#                 except KeyError:\n",
+    "#                     self.loopEdges.add(fromNode,toNode)\n",
     "                self.loopEdges.add(fromNode,toNode)\n",
-    "            elif edgeStatus > 0:\n",
+    "\n",
+    "            elif edgeStatus > 0 and (fromNode,toNode) not in processedEdges:\n",
     "                self.bubbleEdges.add(fromNode,toNode)\n",
     "                combinedGraph.add_edge(fromNode,toNode)\n",
     "\n",
