--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -43,6 +43,7 @@
       "Converted 02_tree.ipynb.\n",
       "Converted 03_synteny.ipynb.\n",
       "Converted 04_utils.ipynb.\n",
+      "Converted 05_export.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -62,7 +63,91 @@
    "source": [
     "#export\n",
     "from collections.abc import Iterable\n",
-    "from copy import deepcopy"
+    "from copy import deepcopy\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def pathConvert(inputPath,suffix=''):\n",
+    "    outputPath = os.path.dirname(inputPath)\n",
+    "    outputName = '.'.join(os.path.splitext(os.path.basename(inputPath))[:-1])+suffix\n",
+    "    return outputPath,outputName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def checkZoomLevels(zoomLevels):\n",
+    "    '''\n",
+    "    Check that each previous zoom level is factor of next one\n",
+    "    '''\n",
+    "    _zoomLevels = np.array(zoomLevels)\n",
+    "    div = _zoomLevels[1:]/_zoomLevels[:-1]\n",
+    "    return not np.any(div - div.astype(np.int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 8, 16]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#export\n",
+    "def adjustZoomLevels(zoomLevels):\n",
+    "    '''\n",
+    "    If there is no zoom level 1, adds it to the list.\n",
+    "    '''\n",
+    "    if not checkZoomLevels(zoomLevels):\n",
+    "        raise ValueError('Zoom level list is incorrect. Each next level should have previous one as factor.')\n",
+    "    if min(zoomLevels)>1:\n",
+    "        zoomLevels = [1] + zoomLevels\n",
+    "    return zoomLevels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "# https://stackoverflow.com/questions/50916422/python-typeerror-object-of-type-int64-is-not-json-serializable\n",
+    "# Class for encoding np types to JSON\n",
+    "class NpEncoder(json.JSONEncoder):\n",
+    "    def default(self, obj):\n",
+    "        if isinstance(obj, np.integer):\n",
+    "            return int(obj)\n",
+    "        elif isinstance(obj, np.floating):\n",
+    "            return float(obj)\n",
+    "        elif isinstance(obj, np.ndarray):\n",
+    "            return obj.tolist()\n",
+    "        elif isinstance(obj, set):\n",
+    "            return list(obj)\n",
+    "        else:\n",
+    "            return super(NpEncoder, self).default(obj)\n"
    ]
   },
   {
@@ -143,6 +228,26 @@
     "        \n",
     "        self[key] = list(valKey)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def pathFileToPathDict(filePath,directional=True):\n",
+    "    paths = {}\n",
+    "    with open(filePath) as f:\n",
+    "        for line in f:\n",
+    "            pathName,pathNodeList = line.strip(' \\n\\t').split(':')\n",
+    "            if directional:\n",
+    "                paths[pathName] = pathNodeList.strip().split(',')\n",
+    "            else:\n",
+    "                paths[pathName] = [f'{node}+' for node in pathNodeList.strip().split(',')]\n",
+    "    \n",
+    "    return paths"
+   ]
   }
  ],
  "metadata": {
@@ -153,5 +258,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
